<resources>
    <string name="app_name">MPISHI</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_landing_page">LandingPageActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="get_started">Get Started</string>
    <string name="logout">LogOut</string>
    <string name="email_address">Email Address</string>
    <string name="sign_in">SIGN IN</string>
    <string name="password">Password</string>
    <string name="a_chef">Looking For a Chef</string>
    <string name="chef">A Chef</string>
    <string name="are_you">Are You:</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <int name="+701477774">Phone Number</int>
    <string name="email_address">Email Address</string>
    <string name="choose_your_location">Choose Your Location</string>
    <string name="retype_pass">Re-type Password</string>
    <string name="already_have_an_account_log_in">Already have an Account? Log In</string>
    <string name="don_t_have_an_account_register">Don\'t have an Account? Register</string>
    <string name="complete_booking">COMPLETE BOOKING</string>
    <string name="booking_details">Booking details</string>
    <string name="textview">TextView</string>
    <string name="payment_method_chosen">Payment method chosen:</string>
    <string name="textview">TextView</string>
    <string name="insert_m_pesa_number">Insert M-pesa number:</string>
    <string name="pay">pay</string>
    <string name="insert_amount">Insert amount</string>
</resources>