<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/Relative1">

    <RelativeLayout
        android:id="@+id/relative2"
        android:layout_width="match_parent"
        android:layout_height="68dp">

        <ImageView
            android:id="@+id/mpishi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/textView"
            app:srcCompat="@drawable/mpishi"
            android:contentDescription="TODO" />

        <TextView
            android:background="@color/darkgreen"
            android:textColor="@color/white"
            android:id="@+id/textView"
            android:layout_width="313dp"
            android:layout_height="66dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="1dp"
            android:layout_marginRight="1dp"
            android:text="@string/complete_booking"
            android:textSize="30sp"
            android:gravity="center_horizontal"
            android:textAllCaps="true"/>

    </RelativeLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="182dp"
        android:layout_height="45dp"

        android:layout_below="@+id/relative2"
        android:layout_marginStart="2dp"
        android:layout_marginLeft="2dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="244dp"
        android:layout_marginRight="244dp"
        android:layout_marginBottom="555dp"
        android:text="@string/booking_details"
        android:textSize="19sp"
        android:textAllCaps="true"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="371dp"
        android:layout_height="222dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginRight="38dp"
        android:layout_marginBottom="363dp"
        android:background="@android:color/darker_gray"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="251dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="376dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:text="@string/payment_method_chosen"
        android:textSize="19sp"
        />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="251dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="421dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:text="@string/textview" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="251dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="544dp"
        android:layout_marginEnd="165dp"
        android:layout_marginRight="165dp"
        android:text="@string/insert_amount" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="251dp"
        android:layout_height="51dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="474dp"
        android:layout_marginEnd="161dp"
        android:layout_marginRight="161dp"
        android:text="@string/insert_m_pesa_number" />

    <EditText
        android:id="@+id/number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="498dp"
        android:ems="10"
        android:hint="+701453621"
        android:inputType="number" />

    <EditText
        android:id="@+id/amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="574dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/pay"
        android:layout_width="162dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="664dp"
        android:layout_marginEnd="135dp"
        android:layout_marginRight="135dp"
        android:background="@color/darkorange"
        android:text="@string/pay"
        app:backgroundTint="@color/darkorange" />

</RelativeLayout>